2017-09-12	Very minor change...

		.gitignore :
		- added build-ia16-redist.tar.xz

2017-08-21	"a.out is a misspelling of the French word for ... August." (3)

		configure ,
		GNUmakefile :
		- now unpacks files from infra/KeccakCodePackage.tar.xz at
		  build time, not at configuration time
2017-08-20	Travis testing for ia16-elf target. (!)

		.travis.yml :
		- added test setups for ia16-elf

		configure :
		- now always unpacks infra/KeccakCodePackage.tar.xz

		infra/travis-install-deps.sh :
		- now downloads ia16-elf-*, dosemu, and dos2unix, for
		  ia16-elf target

		infra/travis-build-and-check.sh :
		- now properly sets up environment for ia16-elf target

		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/epic.cc ,
		share/innocent-pear/calm.cc :
		- gcc wrapper now handles subcommands of the form
		  `ia16-elf-as' etc.

		KeccakCodePackage/ :
		- removed as a Git submodule; now sticking to the version in
		  infra/KeccakCodePackage.tar.xz

		lolwutconf/ :
		- bumped to e38a51a4e0

		infra/lolwutconf.tar.xz :
		- updated

2017-08-19	"a.out is a misspelling of the French word for ... August." (2)

		configure ,
		.travis.yml :
		- optimize for size rather than speed, for host and target

2017-08-18	"a.out is a misspelling of the French word for ... August."

		GNUmakefile :
		- fixed a bug in `make install'

		infra/travis-build-and-check.sh :
		- now tests that `make install' works
		- added `-l' option, which will install into ~/.local/ :-)

2017-07-20	"It was all so different before everything changed."  (3)

		include/innocent-pear/rofl.h :
		- may now invoke 32-bit ioctl(...) syscall on Linux/x86-64
		- fixed typo

2017-07-08	"It was all so different before everything changed."  (2)

		include/innocent-pear/dawg.h :
		- interface change:  dawg_impl_1<...>, dawg_impl_2<...>, and
		  dawg<...> no longer add an implicit '\0' at the end of a
		  string
		- updated operator<<(...) to suppress a trailing '\0' at the
		  end of a string, if present
